// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Dark theme 1`] = `
<div>
  <div
    id="story-root"
    style={Object {}}
  >
    <ThemeProvider
      value={
        Object {
          "theme": "dark",
        }
      }
    >
      <Button />
    </ThemeProvider>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "borderWidth": "1px 0 0 0",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "1.8em",
          "marginBottom": "20px",
          "marginTop": 50,
          "padding": 20,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <Pre
          theme={Object {}}
        >
          <Node
            depth={0}
            key="0/.0"
            maxPropArrayLength={3}
            maxPropObjectKeys={3}
            maxPropStringLength={50}
            maxPropsIntoLine={3}
            node={
              <ThemeProvider
                value={
                  Object {
                    "theme": "dark",
                  }
                }
              >
                <Button />
              </ThemeProvider>
            }
          />
        </Pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div
          key="Button_0"
        >
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            Button
            " Component
          </h2>
          <Component
            excludedPropTypes={Array []}
            maxPropArrayLength={3}
            maxPropObjectKeys={3}
            maxPropStringLength={50}
            type={[Function]}
          />
        </div>
        <div
          key="ThemeProvider_1"
        >
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ThemeProvider
            " Component
          </h2>
          <Component
            excludedPropTypes={Array []}
            maxPropArrayLength={3}
            maxPropObjectKeys={3}
            maxPropStringLength={50}
            type={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Simple render 1`] = `
<div>
  <div
    id="story-root"
    style={Object {}}
  >
    <Button />
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "borderWidth": "1px 0 0 0",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "1.8em",
          "marginBottom": "20px",
          "marginTop": 50,
          "padding": 20,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <Pre
          theme={Object {}}
        >
          <Node
            depth={0}
            key="0/.0"
            maxPropArrayLength={3}
            maxPropObjectKeys={3}
            maxPropStringLength={50}
            maxPropsIntoLine={3}
            node={<Button />}
          />
        </Pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div
          key="Button_0"
        >
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            Button
            " Component
          </h2>
          <Component
            excludedPropTypes={Array []}
            maxPropArrayLength={3}
            maxPropObjectKeys={3}
            maxPropStringLength={50}
            type={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with children 1`] = `
<div>
  <div
    id="story-root"
    style={Object {}}
  >
    <Button>
      Hello Button
    </Button>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "borderWidth": "1px 0 0 0",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "1.8em",
          "marginBottom": "20px",
          "marginTop": 50,
          "padding": 20,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <Pre
          theme={Object {}}
        >
          <Node
            depth={0}
            key="0/.0"
            maxPropArrayLength={3}
            maxPropObjectKeys={3}
            maxPropStringLength={50}
            maxPropsIntoLine={3}
            node={
              <Button>
                Hello Button
              </Button>
            }
          />
        </Pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div
          key="Button_0"
        >
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            Button
            " Component
          </h2>
          <Component
            excludedPropTypes={Array []}
            maxPropArrayLength={3}
            maxPropObjectKeys={3}
            maxPropStringLength={50}
            type={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with text 1`] = `
<div>
  <div
    id="story-root"
    style={Object {}}
  >
    <Button
      text="Custom Props Text"
    />
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "borderWidth": "1px 0 0 0",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "1.8em",
          "marginBottom": "20px",
          "marginTop": 50,
          "padding": 20,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <Pre
          theme={Object {}}
        >
          <Node
            depth={0}
            key="0/.0"
            maxPropArrayLength={3}
            maxPropObjectKeys={3}
            maxPropStringLength={50}
            maxPropsIntoLine={3}
            node={
              <Button
                text="Custom Props Text"
              />
            }
          />
        </Pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div
          key="Button_0"
        >
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            Button
            " Component
          </h2>
          <Component
            excludedPropTypes={Array []}
            maxPropArrayLength={3}
            maxPropObjectKeys={3}
            maxPropStringLength={50}
            type={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
